Fix banner under navbar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,6 +413,11 @@ p{
         letter-spacing: 0;
     } 
 }
+@media screen and (max-width:991px){
+    #banner .container{
+        padding-top: 100px !important;
+    }
+}
 
 /***********About Me***********/
 #about{
